# bond-ai

./: .dockerignore  .env.combined.example  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ATLASSIAN_MCP_INTEGRATION_SESSION.md  AWS_BEDROCK_SETUP_GUIDE.md  BOND_MCP_INTEGRATION.md  DEPLOYMENT_AUTOMATION_IMPROVEMENTS.md  DEPLOYMENT_PLAN_AGENT_SPACE.md  DEPLOYMENT_SESSION_SUMMARY.md  GETTING_STARTED_BEDROCK.md  LOCAL_SETUP_AGENT_SPACE.md  MCAFEEAGENTICSTUDIO-DEV-DEPLOYMENT.md  MCP_ATLASSIAN_SSL_FIX.md  MCP_AUTHENTICATION.md  MCP_PRIVATE_CONFIGURATION_GUIDE.md  METADATA_OAUTH_SYNC_CHANGES.md  Makefile  README.md  SWITCH_TO_MCAFEE_OKTA.md  add_firestore_message.py  agent-space-atlassian-oauth-1.txt  agent-space-atlassian-oauth.txt  alembic.ini  basic_demo.py  bondai_bedrock_agent_policy.json  conftest.py  debugging_session_summary.md  demo_rest_api.py  env.zip.txt  mcp-atlassian.txt  pyproject.toml  requirements.txt  rest_api_flow_demo.py  security-vulnerabilities.md  setup-aws.py  simple_demo.py  (+1 more)
.github/: CODEOWNERS  MODEL_CONFIGURATION_PROTECTION.md
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  security-scanning.yml
archive/: README.md
archive/tests/: test_atlassian_mcp.py  test_mcp_atlassian_e2e.py  test_mcp_atlassian_tools.py  test_mcp_tools_fetching.py
bond_ai/app/: chat_page.py  dashboard.py  dashboard_data.py  index.py  start.py  threads_page.py
bond_ai/bond/: agent.py  broker.py  config.py  functions.py  metadata.py  pages.py  threads.py
bondable/app/: auth.py  chat_page.py  index.py  start.py  threads_page.py
deployment/: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.combined  Dockerfile.frontend  Dockerfile.maintenance  Makefile  NO_VPC_DEPLOYMENT_PLAN.md  README.md  VPC-Assessment-Report.md  debugging_session_summary.md  monitor-deployment.sh  nginx-combined.conf  nginx-local-combined.conf  setup-vpc-for-region.sh  supervisord.conf  test-apprunner-connectivity.sh  test-vpc-availability-fixed.sh  test-vpc-availability-fixed.txt  test-vpc-availability.sh  test_permissions.sh  vpc-test-results.txt
docs/: EKS_ALB_SETUP.md  combined-mode-status.md  local-dev-combined-mode.md  mcp-discovery-delegation-architecture.md  oauth2-configuration.md  verify-combined-stack.md
flutterui/: .gitignore  README_MOBILE.md  THEMING.md  pubspec.yaml  run_mobile.sh
mcps/: README.md
mcps/atlassian/: Dockerfile  README.md  atlassian_cli.py  atlassian_mcp.py  pyproject.toml
mcps/atlassian/atlassian/: atlassian_client.py  auth.py  confluence.py  jira.py  local_auth.py  user.py
mcps/atlassian/deployment/: apprunner.tf  data-sources.tf  main.tf  outputs.tf  variables.tf  versions.tf
mcps/atlassian/tests/: conftest.py  test_atlassian_client.py  test_auth.py  test_confluence.py  test_edge_cases.py  test_jira.py  test_local_auth.py  test_mcp_server.py
mcps/github/: Dockerfile  README.md  github_cli.py  github_mcp.py  pyproject.toml
mcps/github/deployment/: apprunner.tf  data-sources.tf  main.tf  outputs.tf  variables.tf
mcps/github/github/: auth.py  code.py  local_auth.py  repos.py
mcps/github/tests/: conftest.py  test_auth.py  test_edge_cases.py  test_issues.py  test_local_auth.py  test_mcp_server.py  test_pulls.py
mcps/microsoft/: .dockerignore  Dockerfile  README.md  ms_graph_cli.py  ms_graph_mcp.py  pyproject.toml  test_teams_api.py
mcps/microsoft/deployment/: .terraform.lock.hcl  apprunner.tf  data-sources.tf  main.tf  outputs.tf  variables.tf
mcps/microsoft/ms_graph/: auth.py  calendar.py  files.py  graph_client.py  local_auth.py  mail.py  teams.py
mcps/microsoft/tests/: conftest.py  test_auth.py  test_calendar.py  test_files.py  test_graph_client.py  test_local_auth.py  test_mail.py  test_mcp_server.py  test_power_bi.py  test_teams.py
mcps/shared_auth/: pyproject.toml
mcps/shared_auth/shared_auth/: proxy_client.py  token_store.py
mcps/shared_auth/tests/: test_token_store.py
notebooks/: create_agents.ipynb  test_oaia_provider.ipynb
patches/: DOWNSTREAM_MERGE_GUIDE.md  MCP_CONFIG_MIGRATION.md  docs.txt  patch-20251221.txt  patch-20260105.txt
scripts/: add_agent_to_everyone_group.py  api_demo.py  check_bedrock_role_config.py  check_mcp_config.py  check_s3_permissions.py  create_bedrock_service_role.py  create_mcp_agent.py  delete_agent.py  delete_orphaned_agents.py  diagnose_atlassian_oauth.py  fix_aurora_kb_schema.py  migrate_database.py  migrate_file_s3_buckets.py  migrate_guardrails.py  my_client.py  my_server.py  no-push-to-main.sh  oauth_mcp_server.py  recreate_table.py  run-combined-docker.sh  sample_mcp_client.py  sample_mcp_server.py  seed_test_users.py  setup-vpc-for-region.sh  setup_cognito.py  simple_test.py  test_bedrock_payload_limit.py  test_direct_oauth_flow.py  test_mcp_api.py  test_mcp_integration.py  test_mcp_tool_naming.py  test_multi_agent_context.py  test_token_refresh_integration.py  verify-combined-stack.sh
tests/: README.md  common.py  conftest.py  test_agent.py  test_agent_folders.py  test_agent_folders_integration.py  test_agent_forwarding.py  test_agent_forwarding_integration.py  test_agent_record_transaction.py  test_agent_sharing.py  test_alembic_migrations.py  test_app_config_secret.py  test_atlassian_e2e_integration.py  test_atlassian_mcp.py  test_atlassian_mcp_oauth.py  test_auth_oauth2.py  test_auth_provision.py  test_authlib_upgrade.py  test_bedrock_agent_images_simple.py  test_bedrock_agent_refactored.py  test_bedrock_attachment_conversion.py  test_bedrock_connection_resilience.py  test_bedrock_crud_mcp_simple.py  test_bedrock_files.py  test_bedrock_guardrails.py  test_bedrock_image_streaming.py  test_bedrock_mcp_functionality.py  test_bedrock_models_integration.py  test_bedrock_models_rest.py  test_bedrock_provider_integration.py  test_bedrock_quick_functionality.py  test_bedrock_stream_response_integration.py  test_bedrock_threads_integration.py  test_bond_interactive_registry.py  test_bond_mcp_config_rewrite.py  test_bond_providers.py  test_broker.py  test_builder.py  test_cache.py  test_chat_input_validation.py  (+66 more)
(+531 files in other folders)
