[tool.poetry]
name = "bondable"
version = "0.1.15"
description = "Bond AI is and SDK and UI for working with agents built using the OpenAI Assistants API"
license = "MIT"
authors = ["jmcarnahan"]
readme = "README.md"
repository = "https://github.com/jmcarnahan/bond-ai"
homepage = "https://github.com/jmcarnahan/bond-ai"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pytest = "^8.3.4"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
pygments = ">=2.20.0"
google-cloud-secret-manager = "^2.23.1"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
google-auth = "^2.38.0"
google-api-python-client = "^2.163.0"
streamlit-cookies-controller = "^0.0.4"
openai = "^1.66.3"
fastapi = {extras = ["standard"], version = "^0.121.3"}
uvicorn = ">=0.35"
PyJWT = {version = ">=2.12.0", extras = ["crypto"]}
mcp = {extras = ["cli"], version = "^1.23.1"}
fastmcp = ">=3.0.0,<4.0"
magika = "^0.6.2"
google-cloud-firestore = "^2.21.0"
boto3 = "^1.38.39"
requests-aws4auth = "^1.3.1"
psycopg2-binary = "^2.9.10"  # Required for PostgreSQL connection
pyyaml = "^6.0"  # Required for YAML config parsing in main.py
openpyxl = "^3.1.5"  # Required for XLSM to XLSX conversion
websockets = ">=15.0.1"
starlette = ">=0.49.1,<0.51.0"
h11 = "^0.16.0"
urllib3 = ">=2.6.3"
authlib = ">=1.6.9"
filelock = ">=3.20.1"
croniter = "^2.0"
trafilatura = "^2.0"
duckduckgo-search = "^7.0"
slowapi = "^0.1.9"
alembic = "^1.13"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"
pytest-asyncio = "^1.3.0"
pre-commit = "^4.0.0"
poetry-plugin-export = "^1.9.0"
bandit = "^1.9.3"
weasyprint = "^68.1"
tornado = ">=6.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a running backend (deselected by default, run with --integration)",
    "docker: marks tests that require Docker daemon (deselected by default, run with --docker)",
    "investigation: marks concurrency investigation tests (deselected by default, run with --investigation)",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "scripts/.archive"]
skips = [
    "B101",  # Skip assert warnings
    "B107",  # Skip hardcoded password default (false positive on "Bearer")
]
