[tool.poetry]
name = "shared-auth"
version = "0.1.0"
description = "Shared OAuth callback proxy for Bond AI MCP servers"
packages = [{include = "shared_auth"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
